<resources>
    <string name="app_name">LatestTenants</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="user_id">User ID</string>
    <string name="email_id">Email ID</string>
    <string name="create">create</string>
    <string name="or">or</string>
    <string name="image">image</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="fill_your_house_details">Fill your house details.</string>
    <string name="rent_per_month">Rent per month</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="discription">Discription</string>
    <string name="add_image">Add image</string>
    <string name="upload">Upload</string>
</resources>