<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".InputParent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/fill_your_house_details"
        android:layout_marginBottom="1dp"
        android:textSize="30sp"
        android:background="@color/black"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:background="@drawable/camera"
        android:contentDescription="@string/add_image">
    </ImageView>

    <EditText
        android:id="@+id/title"
        android:layout_width="370dp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:hint="@string/title"
        android:background="@drawable/edittext_background"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/rent"
        android:paddingStart="10dp"
        android:layout_width="370dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:hint="@string/rent_per_month"
        android:background="@drawable/edittext_background"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/address"
        android:paddingLeft="10dp"
        android:layout_width="370dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:hint="@string/address"
        android:background="@drawable/edittext_background"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/city"
        android:paddingLeft="10dp"
        android:layout_width="370dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:background="#F8ECEC"
        android:textColor="@color/black"
        android:hint="@string/city"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/state"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/state"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/discription"
        android:paddingLeft="10dp"
        android:layout_width="370dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:background="@drawable/edittext_background"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:minHeight="48dp"
        android:hint="@string/discription"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/upload"/>



</LinearLayout>